library editted for tamra, now called WifiTamra

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=WiFiManager
+name=WifiTamra
 version=0.16.0
-author=tzapu
-maintainer=tablatronix
-sentence=ESP8266 WiFi Connection manager with fallback web configuration portal
-paragraph=Library for configuring ESP8266 modules WiFi credentials at runtime.
+author=ibrahim
+maintainer=Tamra
+sentence=ESP8266 WiFi Connection manager for tamra with fallback web configuration portal
+paragraph=Library for configuring ESP8266 modules WiFi for tamra credentials at runtime.
 category=Communication
-url=https://github.com/tzapu/WiFiManager.git
+url=https://github.com/Tamra-IoT/WiFiManager.git
 architectures=esp8266
